<resources>
    <string name="app_name">MTBTrailApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_registration_acitivity">UserRegistrationAcitivity</string>
    <string name="mtbtrails">MTBTrails</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_user_logged_in">UserLoggedInActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorite_trails">Favorite Trails</string>
    <string name="my_bike">My Bike</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="trails">Trails</string>
    <string name="title_activity_logged_in_user">LoggedInUser</string>
    <string name="drinks">Drinks</string>
    <string name="favorite_drinks">Favorite Drinks</string>
    <string name="report">Report</string>
</resources>
